project(oggvorbis)
set(src
lib/analysis.c
lib/backends.h
lib/barkmel.c
lib/bitrate.c
lib/bitrate.h
lib/bitwise.c
lib/block.c
#books
lib/codebook.c
lib/codebook.h
lib/codec_internal.h
lib/envelope.c
lib/envelope.h
lib/floor0.c
lib/floor1.c
lib/framing.c
lib/highlevel.h
lib/info.c
lib/lookup.c
lib/lookup.h
lib/lookup_data.h
lib/lookups.pl
lib/lpc.c
lib/lpc.h
lib/lsp.c
lib/lsp.h
lib/mapping0.c
lib/masking.h
lib/mdct.c
lib/mdct.h
lib/misc.h
#modes
lib/os.h
lib/psy.c
lib/psy.h
#lib/psytune.c
lib/registry.c
lib/registry.h
lib/res0.c
lib/scales.h
lib/sharedbook.c
lib/smallft.c
lib/smallft.h
lib/synthesis.c
lib/tone.c
lib/vorbisenc.c
lib/vorbisfile.c
lib/window.c
lib/window.h
)

include_directories(lib include)
add_library(oggvorbis STATIC ${src})